wpi-log.txt
+ PROJECT_PATH=../dataset/table-wrapper-csv-impl
+ CF_BINARY=../scripts/tools/checker-framework-3.34.0/checker/bin/javac
+ COMPILED_CLASSES_FOLDER=../dataset/table-wrapper-csv-impl/classes
+ LIB_FOLDER=../dataset/table-wrapper-csv-impl/lib
+ SRC_FILES=../dataset/table-wrapper-csv-impl/cf_srcs.txt
+ CLASSPATH_DIR=../dataset/table-wrapper-csv-impl/classpath
+ echo 'CF_BINARY: ../scripts/tools/checker-framework-3.34.0/checker/bin/javac'
CF_BINARY: ../scripts/tools/checker-framework-3.34.0/checker/bin/javac
+ unzip_jars ../dataset/table-wrapper-csv-impl/lib ../dataset/table-wrapper-csv-impl/classpath
+ local lib_folder=../dataset/table-wrapper-csv-impl/lib
+ local extract_to=../dataset/table-wrapper-csv-impl/classpath
+ '[' -d ../dataset/table-wrapper-csv-impl/classpath ']'
+ rm -rf ../dataset/table-wrapper-csv-impl/classpath
+ mkdir -p ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/apiguardian-api-1.1.2.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/byte-buddy-1.12.16.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/byte-buddy-agent-1.12.16.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/checker-qual-3.26.0.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/jsr305-3.0.2.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/junit-jupiter-5.9.0.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/junit-jupiter-api-5.9.0.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/junit-jupiter-engine-5.9.0.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/junit-jupiter-params-5.9.0.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/junit-platform-commons-1.9.0.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/junit-platform-engine-1.9.0.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/lombok-1.18.24.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/mockito-core-4.8.1.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/mockito-junit-jupiter-4.8.1.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/objenesis-3.2.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/opentest4j-1.2.0.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/table-wrapper-api-791d437bdf.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ for jar_file in '"$lib_folder"/*.jar'
+ unzip -o -q ../dataset/table-wrapper-csv-impl/lib/univocity-parsers-2.9.1.jar -d ../dataset/table-wrapper-csv-impl/classpath
+ find ../dataset/table-wrapper-csv-impl/src -name '*.java'
+ BUILD_CMD='../scripts/tools/checker-framework-3.34.0/checker/bin/javac -processor org.checkerframework.checker.nullness.NullnessChecker -AassumePure -Adetailedmsgtext -Aajava=../dataset/table-wrapper-csv-impl/wpi-out -Ainfer=ajava -Awarns -AshowPrefixInWarningMessages -J-Xmx32G -Xmaxerrs 10000 -g -d ../dataset/table-wrapper-csv-impl/classes -cp ../dataset/table-wrapper-csv-impl/classpath @../dataset/table-wrapper-csv-impl/cf_srcs.txt'
+ CLEAN_CMD='rm -rf ../dataset/table-wrapper-csv-impl/classes'
+ ../scripts/tools/checker-framework-3.34.0/checker/bin/javac -processor org.checkerframework.checker.nullness.NullnessChecker -AassumePure -Adetailedmsgtext -Aajava=../dataset/table-wrapper-csv-impl/wpi-out -Ainfer=ajava -Awarns -AshowPrefixInWarningMessages -J-Xmx32G -Xmaxerrs 10000 -g -d ../dataset/table-wrapper-csv-impl/classes -cp ../dataset/table-wrapper-csv-impl/classpath @../dataset/table-wrapper-csv-impl/cf_srcs.txt
../dataset/table-wrapper-csv-impl/src/main/java/org/spacious_team/table_wrapper/csv/CsvReportPage.java:38: error: duplicate class: org.spacious_team.table_wrapper.csv.CsvReportPage
public class CsvReportPage extends AbstractReportPage<CsvTableRow> {
       ^
../dataset/table-wrapper-csv-impl/src/main/java/org/spacious_team/table_wrapper/csv/DateTimeFormatParser.java:25: error: duplicate class: org.spacious_team.table_wrapper.csv.DateTimeFormatParser
class DateTimeFormatParser {
^
../dataset/table-wrapper-csv-impl/src/main/java/org/spacious_team/table_wrapper/csv/CsvTable.java:28: error: duplicate class: org.spacious_team.table_wrapper.csv.CsvTable
public class CsvTable extends AbstractTable<CsvTableRow> {
       ^
../dataset/table-wrapper-csv-impl/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableHelper.java:28: error: duplicate class: org.spacious_team.table_wrapper.csv.CsvTableHelper
class CsvTableHelper {
^
../dataset/table-wrapper-csv-impl/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableCell.java:25: error: duplicate class: org.spacious_team.table_wrapper.csv.CsvTableCell
public class CsvTableCell extends AbstractTableCell<CsvTableCell.RowAndIndex> {
       ^
../dataset/table-wrapper-csv-impl/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableFactory.java:28: error: duplicate class: org.spacious_team.table_wrapper.csv.CsvTableFactory
public class CsvTableFactory extends AbstractTableFactory<CsvReportPage> {
       ^
../dataset/table-wrapper-csv-impl/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableRow.java:27: error: duplicate class: org.spacious_team.table_wrapper.csv.CsvTableRow
public class CsvTableRow extends AbstractReportPageRow {
       ^
../dataset/table-wrapper-csv-impl/src/main/java/org/spacious_team/table_wrapper/csv/CsvCellDataAccessObject.java:29: error: duplicate class: org.spacious_team.table_wrapper.csv.CsvCellDataAccessObject
public class CsvCellDataAccessObject implements CellDataAccessObject<RowAndIndex, CsvTableRow> {
       ^
8 errors
